--- a/src/assets/css/station9.css
+++ b/src/assets/css/station9.css
@@ -45,12 +45,12 @@
 
     .card__title {
         color: #282828;
-        font-size: 12px;
+        font-size: 10px;
     }
 
     .card__description {
         color: #282828;
-        font-size: 10px;
+        font-size: 8px;
     }
 }
 
@@ -74,6 +74,12 @@
     .card__title {
         color: #282828;
         font-size: 12px;
+    }
+
+    .card__description {
+        color: #282828;
+        font-size: 8px;
+        display: block;
     }
 }
 
