--- a/src/assets/css/station9.css
+++ b/src/assets/css/station9.css
@@ -50,7 +50,7 @@
 
     .card__description {
         color: #282828;
-        font-size: 8px;
+        font-size: 6px;
     }
 }
 
@@ -77,7 +77,7 @@
     }
 
     .card__description {
-        display: block;
+        display: none;
     }
 }
 
