--- a/src/assets/css/station9.css
+++ b/src/assets/css/station9.css
@@ -40,7 +40,7 @@ img {
     font-size: 12px;
 }
 
-@media only screen and (min-width:768px) {
+@media only screen and (max-width: 768px) {
     .card__title {
         color: #282828;
         font-size: 8px;
@@ -52,7 +52,7 @@ img {
     }
 }
 
-@media only screen and (min-width:320px) {
+@media only screen and (max-width: 320px) {
     .card__title {
         color: #282828;
         font-size: 8px;
